# api-games/swagger.json
@@ -2,14 +2,18 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "API de Games",
+    "description": "API de Cadastro de Jogos de uma Locadora de Jogos.<br>Conta também com um sistema de registro e login de usuários, autenticação e autorização de usuários."
   },
   "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
-      "name": "User",
+      "name": "Games",
+      "description": "Endpoints"
+    },
+    {
+      "name": "Users",
       "description": "Endpoints"
     }
   ],
@@ -21,16 +25,8 @@
     "api_key": {
       "type": "apiKey",
       "name": "api_key",
-      "in": "header"
-    },
-    "petstore_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-      "flow": "implicit",
-      "scopes": {
-        "read_pets": "read your pets",
-        "write_pets": "modify pets in your account"
-      }
+      "in": "header",
+      "authorizationUrl": "http://localhost/auth"
     }
   },
   "consumes": [
@@ -42,8 +38,10 @@
   "paths": {
     "/games": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Games"
+        ],
+        "description": "Endpoint para obter todos os Games.",
         "parameters": [],
         "responses": {
           "200": {
